# skillpack

./: ANNOUNCEMENT.md  LICENSE  README.md  pyproject.toml  registry.yaml
.github/workflows/: ci.yml
examples/: prompts.md
skillpack/: __init__.py  __main__.py  cli.py  loader.py  match.py  registry.py  smoke.py
skills/analyze_cluster_health/: SKILL.md
skills/check_disk_pressure/: SKILL.md
skills/check_disk_pressure/scripts/: smoke.sh
skills/create_verification_strategy/: SKILL.md
skills/detect_resource_leak/: SKILL.md
skills/explain_failure/: SKILL.md
skills/generate_triage_plan/: SKILL.md
skills/identify_root_cause/: SKILL.md
skills/summarize_logs/: SKILL.md
tests/: test_loader_registry.py  test_match.py
