[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "skillpack"
version = "0.1.0"
description = "A tiny framework for progressive-disclosure agent skills."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
skillpack = "skillpack.cli:main"

[tool.setuptools]
packages = ["skillpack"]
